added header bar

--- a/personalweb.html
+++ b/personalweb.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./personalweb.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="headerbar">
+        <section class="navigation">
+            <h2>Work</h2>
+            <h2>About</h2>
+            <h2>Get in touch</h2>
+        </section>
+        <section class="title">
+            <h1>Tobi Akere</h1>
+        </section>
+        <section class="socials">
+            <img 
+        </section>
+    </section>
 </body>
 </html>
