added header bar w/o font

--- a/personalweb.html
+++ b/personalweb.html
@@ -8,16 +8,18 @@
 </head>
 <body>
     <section class="headerbar">
-        <section class="navigation">
+        <section class="navigation" id="nav">
             <h2>Work</h2>
             <h2>About</h2>
-            <h2>Get in touch</h2>
+            <h2>Get In Touch</h2>
         </section>
         <section class="title">
             <h1>Tobi Akere</h1>
         </section>
-        <section class="socials">
-            <img 
+        <section class="socials" id="socials">
+            <img src="./images/87390.png">
+            <img src="./images/25231.png">
+            <img src="./images/new-linkedin-logo-white-black-png.png">
         </section>
     </section>
 </body>
