--- a/personalweb.html
+++ b/personalweb.html
@@ -4,23 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./personalweb.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <section class="headerbar">
+    <section class="mainpagebox">
+        <section class="mainpage">
+            <section class="headerbar">
+                <section class="navigation" id="nav">
+                    <h2>Work</h2>
+                    <h2>About</h2>
+                    <h2>Get In Touch</h2>
+                </section>
+                <section class="socials" id="socials">
+                    <img src="./images/68747470733a2f2f7777772e73666572616c6162732e63632f77702d636f6e74656e742f75706c6f6164732f6769746875622d6c6f676f2d77686974652e706e67.png">
+                    <img src="./images/new-Instagram-logo-white-glyph.png">
+                    <img src="./images/displaying-19-gallery-images-for-linkedin-logo-png-25.png">
+                </section>
+            </section>
+        </section>
+        
+    </section>
+    <!-- <section class="headerbar">
         <section class="navigation" id="nav">
             <h2>Work</h2>
             <h2>About</h2>
             <h2>Get In Touch</h2>
-        </section>
-        <section class="title">
-            <h1>Tobi Akere</h1>
         </section>
         <section class="socials" id="socials">
             <img src="./images/87390.png">
             <img src="./images/25231.png">
             <img src="./images/new-linkedin-logo-white-black-png.png">
         </section>
-    </section>
+    </section> -->
 </body>
 </html>
