--- a/personalweb.html
+++ b/personalweb.html
@@ -19,9 +19,10 @@
                     <h2>Get In Touch</h2>
                 </section>
                 <section class="socials" id="socials">
+                    <img src="./images/displaying-19-gallery-images-for-linkedin-logo-png-25.png">
                     <img src="./images/68747470733a2f2f7777772e73666572616c6162732e63632f77702d636f6e74656e742f75706c6f6164732f6769746875622d6c6f676f2d77686974652e706e67.png">
                     <img src="./images/new-Instagram-logo-white-glyph.png">
-                    <img src="./images/displaying-19-gallery-images-for-linkedin-logo-png-25.png">
+                    <img src="./images/1690643777twitter-x logo-png-white.webp">
                 </section>
             </section>
         </section>
