--- a/personalweb.html
+++ b/personalweb.html
@@ -7,6 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -25,8 +31,19 @@
                     <img src="./images/1690643777twitter-x logo-png-white.webp">
                 </section>
             </section>
+            <section class="topblankspace"></section>
+            <section class="titlepage">
+                <section class="row1">
+                    <h1>Hi, I'm</h1>
+                </section>
+                <section class="row2">
+                    <h1>Tobi Akere</h1>
+                </section>
+                <section class=" row3">
+                    <h1>Web Developer</h1>
+                </section>
+            </section>
         </section>
-        
     </section>
 </body>
 </html>
