added about page html and css
added base about page with html and css

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./personalweb.css" rel="stylesheet" type="text/css">
+    <link href="./about.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>About</title>
 </head>
 <body>
     <section class="mainpagebox">
@@ -31,18 +31,7 @@
                     <img src="./images/1690643777twitter-x logo-png-white.webp">
                 </section>
             </section>
-            <section class="topblankspace"></section>
-            <section class="titlepage">
-                <section class="row1">
-                    <h1>Hi, I'm</h1>
-                </section>
-                <section class="row2">
-                    <h1>Tobi Akere</h1>
-                </section>
-                <section class=" row3">
-                    <h1>Web Developer</h1>
-                </section>
-            </section>
+
         </section>
     </section>
 </body>
