--- a/personalweb.html
+++ b/personalweb.html
@@ -43,10 +43,15 @@
                     <h1>Web Developer</h1>
                 </section>
             </section>
+            <section class="scrollelementbox" id="scrollelementbox">
+                <section class="scrollelement" ></section>
+            </section>
         </section>
     </section>
     <section class="aboutpage">
+        <h1 class="fewwordstitle">A Few Words About Me</h1>
 
     </section>
+    <script src="./personalweb.js" defer></script>
 </body>
 </html>
